--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ language: cpp
 addons:
   apt:
     sources:
-      -ubuntu-toolchain-r-test
+      - ubuntu-toolchain-r-test
     packages:
-      -g++-5
+      - g++-5
 script:
   -CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
   -cmake .
