--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ImageProcessingLib_pp)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(ImageProcessingLib_pp library.cpp library.h)
+add_library(ImageProcessingLib_pp lib/library.cpp lib/library.h)
