--- a/.travis.yml
+++ b/.travis.yml
@@ -5,25 +5,10 @@ language: cpp
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-tests
+      - ubuntu-toolchain-r-test
     packages:
       - g++-5
 script:
   - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
   - cmake .
   - cmake --build . -- -j2
-install:
-  - cd ${TRAVIS_BUILD_DIR}
-  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
-  - tar xf lcov_1.11.orig.tar.gz
-  - sudo make -C lcov-1.11/ install
-  - gem install coveralls-lcov
-before_script:
-  - cd ${TRAVIS_BUILD_DIR}
-  - lcov --directory . --zerocounters
-after_success:
-  - cd ${TRAVIS_BUILD_DIR}
-  - lcov --directory . --capture --output-file coverage.info # capture coverage info
-  - lcov --remove coverage.info 'tests/*' '/usr/*' 'tests-library*' --output-file coverage.info # filter out system and tests code
-  - lcov --list coverage.info # debug before upload
-  - coveralls-lcov coverage.info
