travis CI include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.2)
+cmake_minimum_required(VERSION 3.5)
 project(ImageProcessingLib_pp)
-include(gtest.cmake)
+add_compile_options(-Wall -Wextra -Wpedantic)
 set(CMAKE_CXX_STANDARD 17)
 find_package (Threads)
-target_link_libraries(gtest ${CMAKE_THREAD_LIBS_INIT})
 add_library(ImageProcessingLib_pp lib/library.cpp lib/library.h)
+target_compile_features(ImageProcessingLib_pp PRIVATE cxx_lambda_init_captures)
