--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-6
+before_install:
+  - pip install --user cpp-coveralls
 script:
+  - ./configure --enable-gcov && make && make check
   - CXX=/usr/bin/g++-6 CC=/usr/bin/gcc-6 cmake .
   - cmake --build . -- -j2
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
