--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,25 @@
 cmake_minimum_required(VERSION 3.5)
 project(ImageProcessingLib_pp)
-add_compile_options(-Wall -Wextra -Wpedantic)
 set(CMAKE_CXX_STANDARD 17)
+add_compile_options(-Wall -Wextra -Wpedantic)
+
 find_package (Threads)
+find_package(GTest REQUIRED)
+
 add_library(ImageProcessingLib_pp lib/library.cpp lib/library.h)
+
+#include_directories(${source_dir}/gtest/include)
+
+include_directories(${GTEST_INCLUDE_DIRS})
+
 target_compile_features(ImageProcessingLib_pp PRIVATE cxx_lambda_init_captures)
+
+#include(gtest.cmake)
+
+
+
 add_executable(MainProgram src/main.cpp)
 add_executable(Tests tests/Tests.cpp)
-include(gtest.cmake)
-find_package (Threads)
-target_link_libraries(Tests ${CMAKE_THREAD_LIBS_INIT})
+
+target_link_libraries(Tests ${GTEST_LIBRARIES} pthread)
+#target_link_libraries(Tests ${CMAKE_THREAD_LIBS_INIT})
