--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - g++-6
+      - g++-5
 before_install:
   - pip install --user cpp-coveralls
 script:
-  - ./configure --enable-gcov && make && make check
-  - CXX=/usr/bin/g++-6 CC=/usr/bin/gcc-6 cmake .
+  - /configure --enable-gcov && make && make check
+  - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
   - cmake --build . -- -j2
   - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
