--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
 before_install:
   - pip install --user cpp-coveralls
 script:
-  - /configure --enable-gcov && make && make check
+  - ./configure --enable-gcov && make && make check
   - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
   - cmake --build . -- -j2
   - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
