travis CI include

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,20 @@ dist: trusty
 sudo: false
 language: cpp
 
+before_install:
+  - pip install --user cpp-coveralls
+
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
       - g++-5
-before_install:
-  - pip install --user cpp-coveralls
+      - gcc
+      - make
+      - cmake
+      - gdb
+
 script:
   - ./configure --enable-gcov && make && make check
   - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
