travis CI include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 project(ImageProcessingLib_pp)
 set(CMAKE_CXX_STANDARD 17)
 #add_compile_options(-Wall -Wextra -Wpedantic)
-find_package(GTest REQUIRED)
+#find_package(GTest REQUIRED)
 #find_package (Threads)
 
 
