--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ addons:
 script:
   - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
   - cmake --build . -- -j2
-  - ./configure --enable-gcov && make && make check
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+#  - ./configure --enable-gcov && make && make check
+#  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
