travis CI include

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+#dist: trusty
 sudo: false
 language: cpp
 
@@ -19,5 +19,6 @@ addons:
 script:
   - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
   - cmake --build . -- -j2
-#  - ./configure --enable-gcov && make && make check
-#  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - ./configure --enable-gcov && make && make check
+after_success:
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
