--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,9 @@ script:
   - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
   - cmake --build . -- -j2
   - ./configure --enable-gcov && make && make check
+
+build:
+  make
+
 after_success:
   - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
