--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,21 @@
-#dist: trusty
+dist: trusty
 sudo: false
 language: cpp
-os: linux
-
-before_install:
-  - pip install --user cpp-coveralls
 
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - g++-5
-      - gcc
-      - make
-      - cmake
-      - gdb
+      - g++-6
+
+before_install:
+  - pip install --user cpp-coveralls
 
 script:
-  - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
-  - cmake --build . -- -j2
-  - ./configure --enable-gcov && make && make check
-
-build:
-  make
+  - CXX=/usr/bin/g++-6 CC=/usr/bin/gcc-6 cmake -DCOVERAGE=1 .
+  - cmake --build .
+  - ./tests
 
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - coveralls --root . -E ".*gtest.*" -E ".*CMakeFiles.*"
