--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(ImageProcessingLib_pp)
 set(CMAKE_CXX_STANDARD 17)
 add_compile_options(-Wall -Wextra -Wpedantic)
 find_package(GTest REQUIRED)
-find_package (Threads)
+#find_package (Threads)
 
 
 add_library(ImageProcessingLib_pp lib/library.cpp lib/library.h)
