--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,24 @@
-dist: trusty
+#dist: trusty
 sudo: false
 language: cpp
+
+before_install:
+  - pip install --user cpp-coveralls
 
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - g++-6
-
-before_install:
-  - pip install --user cpp-coveralls
+      - g++-5
+      - gcc
+      - make
+      - cmake
+      - gdb
 
 script:
-  - CXX=/usr/bin/g++-6 CC=/usr/bin/gcc-6 cmake -DCOVERAGE=1 .
-  - cmake --build .
-#  - ./tests
-
+  - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
+  - cmake --build . -- -j2
+  - ./configure --enable-gcov && make && make check
 after_success:
-  - coveralls --root . -E ".*gtest.*" -E ".*CMakeFiles.*"
-  -
+  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
