--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@
 sudo: false
 language: cpp
 
-before_install:
-  - pip install --user cpp-coveralls
 
 addons:
   apt:
@@ -16,9 +14,16 @@ addons:
       - cmake
       - gdb
 
+before_install:
+  - pip install --user cpp-coveralls
+
 script:
   - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
   - cmake --build . -- -j2
   - ./configure --enable-gcov && make && make check
+  - ctest
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  - coveralls --root .. -E ".*external.*" -E ".*CMakeFiles.*" -E ".*test/.*.cpp.*"
+
+notifications:
+  email: false
