--- a/.travis.yml
+++ b/.travis.yml
@@ -13,17 +13,19 @@ addons:
       - make
       - cmake
       - gdb
-
+deploy:
+  provider: releases
+  file: $TRAVIS_BUILD_DIR/src/main.cpp
+  on:
+    branch: master
+    repo: paulkokos/ImageProvessingLib-cc
 before_install:
   - pip install --user cpp-coveralls
 
 script:
   - CXX=/usr/bin/g++-5 CC=/usr/bin/gcc-5 cmake .
   - cmake --build . -- -j2
-  - rm -rf build/
-  - mkdir build
-  - cd build
-  - ./configure --enable-gcov && make && make check
+  - mkdir build && cd build && cmake -DCOVERALLS=ON -DCMAKE_BUILD_TYPE=Debug .. && cmake --build . && cmake --build . --target coveralls
   - ctest --extra-verbose
 after_success:
   - coveralls --root .. -E ".*external.*" -E ".*CMakeFiles.*" -E ".*tests/.*.cpp.*"
